--- a/index.html
+++ b/index.html
@@ -207,9 +207,7 @@
     <footer class="footer" id="contact">
       <div class="section__container footer__container">
         <div class="footer__col">
-          <div class="logo">
-            <a href="#home"><img src="assets/logo.png" alt="logo" /></a>
-          </div>
+          
           <p class="section__description">
             Discover a world of comfort, luxury, and adventure as you explore
             our curated selection of hotels, making every moment of your getaway
@@ -219,7 +217,7 @@
         </div>
         <div class="footer__col">
           <h4>QUICK LINKS</h4>
-          <ul class="footer__links">
+          <ul style="visibility: visible;" class="footer__links">
             <li><a href="#">Browse Destinations</a></li>
             <li><a href="#">Special Offers & Packages</a></li>
             <li><a href="#">Room Types & Amenities</a></li>
@@ -239,7 +237,7 @@
         <div class="footer__col">
           <h4>CONTACT US</h4>
           <ul class="footer__links">
-            <li><a href="#">rayalpark@info.com</a></li>
+            <li><a href="#">vishwakarmadheeraj2002@gmail.com</a></li>
           </ul>
           <div class="footer__socials">
             <a href="https://www.facebook.com/profile.php?id=100052184327978"><img src="assets/facebook.png" alt="facebook" /></a>
